<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginTop="4dp"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    android:layout_marginBottom="4dp"
    card_view:cardCornerRadius="4dp"
    android:id="@+id/cardview_character_layout">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:padding="4dp">

        <ImageView
            android:id="@+id/cardview_character_photo"
            android:layout_width="150dp"
            android:layout_height="220dp"
            android:scaleType="centerCrop"
            android:layout_marginBottom="4dp"
            android:contentDescription="@string/photo" />

        <TextView
            android:id="@+id/cardview_character_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/cardview_character_photo"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:layout_marginBottom="8dp"
            android:text="@string/name"/>

        <TextView
            android:id="@+id/cardview_character_forces"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/cardview_character_photo"
            android:layout_below="@id/cardview_character_name"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:layout_marginBottom="8dp"
            android:text="@string/forces"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_toEndOf="@id/cardview_character_photo"
            android:layout_marginStart="@dimen/activity_vertical_margin"
            android:orientation="horizontal">

            <Button
                android:id="@+id/cardview_character_favorite"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="11sp"
                android:layout_weight="1"
                tools:ignore="SmallSp"
                android:text="@string/favorite" />

            <Button
                android:id="@+id/cardview_character_share"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="11sp"
                tools:ignore="SmallSp"
                android:text="@string/share"/>

        </LinearLayout>

    </RelativeLayout>

</android.support.v7.widget.CardView>